tests/baselines/reference/forInStatement7.errors.txt
==== tests/cases/compiler/forInStatement7.ts (1 errors) ====
    var a: number;
    var expr: any;
    for (a in expr) {
         ~
!!! forInStatement7.ts(3,6): error TS2116: Variable declarations of a 'for' statement must be of types 'string' or 'any'.
    }